Fix top panel tab visibility on mobile devices

--- a/frontend/assets/less/site.less
+++ b/frontend/assets/less/site.less
@@ -4481,6 +4481,8 @@ margin-top:0;}
 
 	.navin ul li.active {
 		display: inline-block;
+		position: relative;
+		visibility: visible;
 	}
 
 	.navin ul li.active a {
